log
Thu 25 Apr 2024 12:50:59 AM UTC: 
 tests:  0|6
total_score: 0/70
234381a
Thu 25 Apr 2024 12:58:43 AM UTC: 
 hashmap.c | 46 ++++++++++++++--------------------------------
 1 file changed, 14 insertions(+), 32 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
af9ece9
Thu 25 Apr 2024 01:00:48 AM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
f2d21e9
Thu 25 Apr 2024 01:02:07 AM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
22d533b
Thu 25 Apr 2024 01:03:20 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
75c9028
Thu 25 Apr 2024 01:03:33 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fd873a2
Thu 25 Apr 2024 01:03:53 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
073f3d6
Thu 25 Apr 2024 01:06:17 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
e1dab24
Thu 25 Apr 2024 01:06:25 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
6f15284
Thu 25 Apr 2024 01:14:34 AM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ffb99e7
Thu 25 Apr 2024 01:14:58 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
aacf8ae
Thu 25 Apr 2024 01:20:21 AM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
9b79ee9
Thu 25 Apr 2024 01:20:44 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 30/70
8bbcf5f
Thu 25 Apr 2024 01:21:02 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
1b7998b
Thu 25 Apr 2024 01:27:17 AM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:76:6: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   76 |   if (map->buckets[pos] != NULL)
      |      ^
cc1: all warnings being treated as errors
Compilation failed
a47bd99
Thu 25 Apr 2024 01:28:06 AM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
655d948
Thu 25 Apr 2024 01:29:01 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
765af5d
Thu 25 Apr 2024 01:30:58 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
8897aa1
Thu 25 Apr 2024 01:32:51 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
700692c
Thu 25 Apr 2024 01:33:10 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
48be9d3
Thu 25 Apr 2024 01:55:57 AM UTC: 
 hashmap.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
25ac6b0
Thu 25 Apr 2024 11:28:11 PM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  12|2
total_score: 50/70
6cb23c5
Thu 25 Apr 2024 11:28:41 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
f1f62b1
Thu 25 Apr 2024 11:29:04 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
d15f21a
Thu 25 Apr 2024 11:29:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
f3b843b
Thu 25 Apr 2024 11:30:35 PM UTC: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  13|2
total_score: 50/70
5dd6e9d
Thu 25 Apr 2024 11:30:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
85eb35f
Thu 25 Apr 2024 11:31:06 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  13|2
total_score: 50/70
7b8e427
Thu 25 Apr 2024 11:31:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
55635bf
Thu 25 Apr 2024 11:31:55 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  13|2
total_score: 50/70
f7d2828
Thu 25 Apr 2024 11:32:09 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|2
total_score: 50/70
d50c904
